--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@egjs/grid": "^1.11.1",
     "mongodb": "^4.7.0",
     "next": "10.0.6",
     "react": "17.0.1",
