--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.21",
+    "typescript": "4.8.4"
   }
 }
